# QuantVista

./: .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: CODEOWNERS
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
backend/: .dockerignore  .importlinter  Dockerfile  README.md  pyproject.toml
backend/scripts/: dev_backfill.py  load_nifty200_universe.py
backend/scripts/data/: nifty200.csv
backend/src/quantvista/: __init__.py
backend/src/quantvista/alerts/: __init__.py  channels.py  email.py  email_render.py  evaluation.py  interfaces.py  models.py  repositories.py  rules.py  services.py
backend/src/quantvista/alerts/templates/email/: _base.html.j2  dividend_alert.html.j2  earnings_alert.html.j2  ipo_alert.html.j2  metric_alert.html.j2
backend/src/quantvista/analytics/: __init__.py  context.py  factors.py  interfaces.py  models.py  normalizer.py  repositories.py  saved_screens.py  scoring.py  screener.py  sentiment.py  services.py
backend/src/quantvista/api/: __init__.py  app.py  deps.py  idempotency.py  middleware.py  pagination.py  routes.py  routes_alerts.py  routes_news.py  routes_notifications.py  routes_portfolios.py  routes_scores.py  routes_screener.py  routes_screens.py  routes_stocks.py
backend/src/quantvista/core/: __init__.py  cache.py  config.py  db.py  event_types.py  events.py  interfaces.py
backend/src/quantvista/core/observability/: __init__.py  context.py  logging.py  metrics.py  sentry.py  tracing.py
backend/src/quantvista/db/: README.md  alembic.ini
backend/src/quantvista/db/migrations/versions/: 0008_portfolio_risk.py  0012_platform.py  0013_auth_refresh_tokens.py  0014_saved_screen_unique_name.py  0014_saved_screens.py  0015_news_stocks.py  0016_alerts.py  0016_idempotency_keys.py
backend/src/quantvista/db/seeds/: seed_reference.sql
backend/src/quantvista/identity/: __init__.py  entitlements.py  interfaces.py  models.py  repositories.py  security.py  services.py
backend/src/quantvista/jobs/: __init__.py  alerts.py  celery_app.py  compute.py  consumers.py  corrections.py  framework.py  ingest.py  ledger.py  macro.py  news.py  ops_metrics.py  quality.py  scoring.py  sentiment.py  universe.py
backend/src/quantvista/market_data/: __init__.py  adjustments.py  fundamentals.py  indicators.py  interfaces.py  macro.py  models.py  quality.py  ratios.py  repositories.py  returns.py  services.py  trading_calendar.py
backend/src/quantvista/market_data/adapters/: __init__.py  yfinance_dev.py
backend/src/quantvista/news/: __init__.py  events.py  interfaces.py  models.py  providers.py  repositories.py  sentiment.py  services.py  tagging.py
backend/src/quantvista/news/adapters/: __init__.py  finbert.py
backend/src/quantvista/portfolio/: __init__.py  constraints.py  covariance.py  interfaces.py  models.py  optimizer.py  repositories.py  risk.py  services.py
backend/src/quantvista/portfolio/optimization/: __init__.py  base.py  mean_variance.py  risk_parity.py
backend/src/quantvista/schemas/: __init__.py  alerts.py  auth.py  envelope.py  news.py  notifications.py  optimize.py  portfolios.py  risk.py  scores.py  screener.py  screens.py  stocks.py
backend/tests/: conftest.py  test_adjustments.py  test_alert_evaluation.py  test_alert_rules.py  test_auth_security.py  test_cache.py  test_celery_app.py  test_config.py  test_correction_consumer.py  test_db_unit.py  test_email_render.py  test_email_sender.py  test_entitlements.py  test_event_bus.py  test_event_impact.py  test_event_types.py  test_factors.py  test_finbert_adapter.py  test_fundamentals_adapter.py  test_grafana_dashboard.py  test_health.py  test_idempotency.py  test_import_skeleton.py  test_indicators.py  test_job_framework_unit.py  test_macro_provider.py  test_market_data_calendar.py  test_market_data_models.py  test_market_data_provider.py  test_news_provider.py  test_news_service.py  test_news_tagging.py  test_normalizer.py  test_observability_app.py  test_observability_context.py  test_observability_logging.py  test_observability_metrics.py  test_observability_sentry.py  test_observability_tracing.py  test_ops_metrics.py  (+19 more)
backend/tests/integration/: test_api_alerts.py  test_api_news.py  test_api_notifications.py  test_api_optimize.py  test_api_portfolios.py  test_api_risk.py  test_api_scores.py  test_api_screener.py  test_api_screens.py  test_api_stocks.py  test_auth.py  test_bulk_pit_readers.py  test_cache_redis.py  test_compute_indicators.py  test_corporate_actions.py  test_correction_pipeline.py  test_daily_prices_schema.py  test_data_quality.py  test_deliver_notifications.py  test_evaluate_alerts.py  test_event_bus_kafka.py  test_event_bus_redis.py  test_event_bus_wiring.py  test_factor_pit.py  test_fundamentals.py  test_fundamentals_ingest.py  test_ingest_task.py  test_job_framework.py  test_jobs_runs_schema.py  test_macro_sync.py  test_news_ingest.py  test_news_tagging.py  test_ops_metrics_task.py  test_portfolio_repository.py  test_price_ingestion.py  test_reference_schema.py  test_returns_matrix.py  test_rls_idempotency.py  test_rls_isolation.py  test_rls_portfolios.py  (+10 more)
backend/tests/unit/: test_nifty200_loader.py
db/: README.md
docs/: architecture.md  data-models.md  development-guide.md  index.md  pending-verifications.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
ops/: README.md
plans/: 00-overview-and-decisions.md  01-prd.md  02-architecture.md  03-data-architecture.md  04-api-contracts.md  05-domain-and-quant.md  06-scheduler-and-jobs.md  07-security-and-compliance.md  08-infra-devops-observability.md  09-roadmap-and-delivery.md  README.md  epic-12-earlier-claude-db-recommendation  future-ria-compliance.md  future-scale-microservices.md  future-us-market-expansion.md  plan_discussion.txt
scripts/: README.md
(+218 files in other folders)
