[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantvista"
version = "0.1.0"
description = "QuantVista backend — modular monolith (India-first equity research platform)"
requires-python = ">=3.13"
# Runtime dependencies for the full backend. The QV-001 skeleton only exercises the
# stdlib + tooling; full provisioning (Postgres/Redis/etc.) lands with QV-002.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
# Alembic migrations are hand-written DDL, kept byte-identical and formatted by alembic's
# own post-write hook (alembic.ini) — not by the app's ruff config.
extend-exclude = ["src/quantvista/db/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once at import; not real B008 calls.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Cookie"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/quantvista", "tests"]
# Hand-written Alembic migrations are not part of the typed public surface.
exclude = "src/quantvista/db/migrations/"

# Celery ships no py.typed marker; treat as untyped third-party.
[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

# Celery's decorators are untyped (Any); allow them in the jobs composition root only.
[[tool.mypy.overrides]]
module = ["quantvista.jobs.celery_app"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires a reachable PostgreSQL database (skipped when none is reachable)",
]
# Coverage target for the project is >=80% (CI gate, wired in QV-003). Not enforced
# on this empty skeleton — there is no production logic to cover yet.
