[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantvista"
version = "0.1.0"
description = "QuantVista backend — modular monolith (India-first equity research platform)"
requires-python = ">=3.13"
# Runtime dependencies for the full backend. The QV-001 skeleton only exercises the
# stdlib + tooling; full provisioning (Postgres/Redis/etc.) lands with QV-002.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    # Observability (QV-009): structured logs, tracing, metrics, error tracking.
    "structlog>=24.1",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-celery>=0.48b0",
    "prometheus-client>=0.20",
    "sentry-sdk>=2.13",
    # Market data (QV-016): NSE/BSE trading calendar (India = XBOM; NSE/BSE share holidays).
    "exchange-calendars>=4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "httpx>=0.27",
    "PyYAML>=6.0",       # validate the checked-in Prometheus rule/config YAML (QV-020)
    "types-PyYAML>=6.0",
]
# Internal-only dev data source (QV-012). yfinance/Yahoo is NOT licensed for commercial
# use — kept OUT of the default/prod install on purpose (project rule #8). The dev adapter
# lazily imports it; install with `pip install -e .[dev-data]` for a live data pull.
dev-data = [
    "yfinance>=0.2",
]
# Kafka event-bus backend (QV-024). Optional — only needed when event_bus_backend=kafka.
# kafka-python-ng is pure-Python (no librdkafka C build → installs on macOS 12 + CI Linux).
# The KafkaEventBus lazy-imports it; the default install never requires it.
kafka = [
    "kafka-python-ng>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
# Alembic migrations are hand-written DDL, kept byte-identical and formatted by alembic's
# own post-write hook (alembic.ini) — not by the app's ruff config.
extend-exclude = ["src/quantvista/db/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once at import; not real B008 calls.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Cookie"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/quantvista", "tests"]
# Hand-written Alembic migrations are not part of the typed public surface.
exclude = "src/quantvista/db/migrations/"

# Celery ships no py.typed marker; treat as untyped third-party.
[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

# Celery's decorators are untyped (Any); allow them in the jobs composition root only.
[[tool.mypy.overrides]]
module = ["quantvista.jobs.celery_app"]
disallow_untyped_decorators = false

# yfinance ships no py.typed marker and is an optional extra; treat as untyped third-party.
[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

# kafka-python-ng ships no stubs and is an optional extra; treat as untyped third-party.
[[tool.mypy.overrides]]
module = ["kafka", "kafka.*"]
ignore_missing_imports = true

# Trading-calendar + its pandas dependency ship no usable stubs; treat as untyped.
[[tool.mypy.overrides]]
module = ["exchange_calendars", "exchange_calendars.*", "pandas", "pandas.*"]
ignore_missing_imports = true

# The ingest + quality + universe + ops-metrics Celery tasks use the untyped @app.task decorator.
[[tool.mypy.overrides]]
module = [
    "quantvista.jobs.ingest",
    "quantvista.jobs.quality",
    "quantvista.jobs.universe",
    "quantvista.jobs.ops_metrics",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires a reachable PostgreSQL database (skipped when none is reachable)",
]

[tool.coverage.run]
# Count code that runs in reader threads (the Redis Streams / Kafka event-bus consumers, QV-024).
concurrency = ["thread"]
# Coverage target for the project is >=80% (CI gate, wired in QV-003). Not enforced
# on this empty skeleton — there is no production logic to cover yet.
